tests: add very simple zbar unit test
Not valgrind clean yet (could be zbar's fault though).

--- a/configure.ac
+++ b/configure.ac
@@ -1782,6 +1782,7 @@ sys/winks/Makefile
 sys/winscreencap/Makefile
 tests/Makefile
 tests/check/Makefile
+tests/files/Makefile
 tests/examples/Makefile
 tests/examples/camerabin/Makefile
 tests/examples/directfb/Makefile
