pbutils: Take nano version into account in GST_CHECK_PLUGINS_BASE_VERSION()
If the nano is > 0 the current version should be handled the same as
micro + 1.

--- a/gst-libs/gst/pbutils/gstpluginsbaseversion.h.in
+++ b/gst-libs/gst/pbutils/gstpluginsbaseversion.h.in
@@ -73,7 +73,9 @@ G_BEGIN_DECLS
     (GST_PLUGINS_BASE_VERSION_MAJOR > (major) || \
      (GST_PLUGINS_BASE_VERSION_MAJOR == (major) && GST_PLUGINS_BASE_VERSION_MINOR > (minor)) || \
      (GST_PLUGINS_BASE_VERSION_MAJOR == (major) && GST_PLUGINS_BASE_VERSION_MINOR == (minor) && \
-      GST_PLUGINS_BASE_VERSION_MICRO >= (micro)))
+      GST_PLUGINS_BASE_VERSION_MICRO >= (micro)) || \
+     (GST_PLUGINS_BASE_VERSION_MAJOR == (major) && GST_PLUGINS_BASE_VERSION_MINOR == (minor) && \
+      GST_PLUGINS_BASE_VERSION_MICRO + 1 == (micro) && GST_PLUGINS_BASE_VERSION_NANO > 0))
 
 void     gst_plugins_base_version (guint *major, guint *minor, guint *micro, guint *nano);
 
