--- a/configure.ac
+++ b/configure.ac
@@ -240,18 +240,22 @@ AC_SUBST(GSTPB_PREFIX)
 
 dnl GTK is optional and used in examples
 HAVE_GTK=no
+GTK2_REQ=2.14.0
+GTK3_REQ=2.91.3
 if test "x$BUILD_EXAMPLES" = "xyes"; then
   AC_MSG_CHECKING([which gtk+ version to compile examples against (optional)])
   AC_ARG_WITH([gtk],
     AC_HELP_STRING([--with-gtk=3.0|2.0],
                    [which gtk+ version to compile against (default: 2.0)]),
     [case "$with_gtk" in
-        2.0|3.0) ;;
+        2.0) GTK_REQ=$GTK2_REQ ;;
+        3.0) GTK_REQ=$GTK3_REQ ;;
         *) AC_MSG_ERROR([invalid gtk+ version specified]);;
     esac],
-    [with_gtk=2.0])
-  AC_MSG_RESULT([$with_gtk])
-  PKG_CHECK_MODULES(GTK, gtk+-$with_gtk, HAVE_GTK=yes, HAVE_GTK=no)
+    [with_gtk=2.0
+     GTK_REQ=$GTK2_REQ])
+  AC_MSG_RESULT([$with_gtk (>= $GTK_REQ)])
+  PKG_CHECK_MODULES(GTK, gtk+-$with_gtk >= $GTK_REQ, HAVE_GTK=yes, HAVE_GTK=no)
   AC_SUBST(GTK_LIBS)
   AC_SUBST(GTK_CFLAGS)
 fi
