win32: Adding photography interface .def file
Adds check-exports to -bad to have photography interface
.def file created

Fixes #578629

--- a/Makefile.am
+++ b/Makefile.am
@@ -37,6 +37,7 @@ endif
 
 include $(top_srcdir)/common/coverage/lcov.mak
 
+check: check-exports
 
 # cruft: plugins that have been merged or moved or renamed
 
