datetime: Add _from_unix_epoch variants
Adds 2 variants for the gst_date_time_from_unix_epoch function,
one for UTC and another for local time.

API: gst_date_time_new_from_unix_epoch_utc
API: gst_date_time_new_from_unix_epoch_local_time

Fixes #653031

https://bugzilla.gnome.org/show_bug.cgi?id=635031

--- a/configure.ac
+++ b/configure.ac
@@ -374,6 +374,7 @@ AC_MSG_RESULT($have_tm_gmtoff)
 dnl *** checks for library functions ***
 
 AC_CHECK_FUNCS([gmtime_r])
+AC_CHECK_FUNCS([localtime_r])
 AC_CHECK_FUNCS([sigaction])
 
 dnl check for fseeko()
