introspection: Include exported packages information in GIRs
https://bugzilla.gnome.org/show_bug.cgi?id=635389

--- a/gst/Makefile.am
+++ b/gst/Makefile.am
@@ -270,6 +270,7 @@ Gst-@GST_MAJORMINOR@.gir: $(INTROSPECTION_SCANNER) libgstreamer-@GST_MAJORMINOR@
 		--pkg gmodule-no-export-2.0 \
 		--pkg gthread-2.0 \
 		--pkg libxml-2.0 \
+		--pkg-export gstreamer-0.10 \
 		--output $@ \
 		$(gir_headers) \
 		$(gir_sources)
