--- a/libs/gst/check/Makefile.am
+++ b/libs/gst/check/Makefile.am
@@ -126,6 +126,7 @@ GstCheck-@GST_MAJORMINOR@.gir: $(INTROSPECTION_SCANNER) libgstcheck-@GST_MAJORMI
 		--include=Gst-0.10 \
 		--libtool="$(top_builddir)/libtool" \
 		--pkg gstreamer-0.10 \
+		--pkg-export gstreamer-check-0.10 \
 		--output $@ \
 		$(gir_headers) \
 		$(gir_sources)
