--- a/libs/gst/base/Makefile.am
+++ b/libs/gst/base/Makefile.am
@@ -66,6 +66,7 @@ GstBase-@GST_MAJORMINOR@.gir: $(INTROSPECTION_SCANNER) libgstbase-@GST_MAJORMINO
 		--include=Gst-0.10 \
 		--libtool="$(top_builddir)/libtool" \
 		--pkg gstreamer-0.10 \
+		--pkg-export gstreamer-base-0.10 \
 		--output $@ \
 		$(gir_headers) \
 		$(gir_sources)
