--- a/gst-libs/gst/netbuffer/Makefile.am
+++ b/gst-libs/gst/netbuffer/Makefile.am
@@ -27,6 +27,7 @@ GstNetbuffer-@GST_MAJORMINOR@.gir: $(INTROSPECTION_SCANNER) libgstnetbuffer-@GST
 		--include=Gst-0.10 \
 		--libtool="$(top_builddir)/libtool" \
 		--pkg gstreamer-0.10 \
+		--pkg-export gstreamer-netbuffer-0.10 \
 		--output $@ \
 		$(gir_headers) \
 		$(gir_sources)
