Fix distcheck some more.
In testsuite/common.py look for gst/__init__.py in builddir now.
Clean gst/__init__.pyc after make check.

--- a/gst/Makefile.am
+++ b/gst/Makefile.am
@@ -80,7 +80,7 @@ GST_OVERRIDES = 		\
 	gstbase.override
 
 GST_DEFS = gst.defs gst-types.defs gst-extrafuncs.defs libs.defs base.defs
-CLEANFILES = gst.c
+CLEANFILES = gst.c __init__.pyc
 EXTRA_DIST += $(GST_DEFS) $(GST_OVERRIDES) gstversion.override.in
 gst.c: $(GST_DEFS) $(GST_OVERRIDES) $(GEN_FILES) gstversion.override __init__.py
 
