camerabin2: Move plugin init to a separate file
Moves plugin init to gstplugin.c to allow multiple
elements to register themselves.

--- a/gst/camerabin2/Makefile.am
+++ b/gst/camerabin2/Makefile.am
@@ -1,6 +1,7 @@
 plugin_LTLIBRARIES = libgstcamerabin2.la
 
-libgstcamerabin2_la_SOURCES = gstviewfinderbin.c
+libgstcamerabin2_la_SOURCES = gstviewfinderbin.c \
+				gstplugin.c
 
 libgstcamerabin2_la_CFLAGS = \
 	$(GST_PLUGINS_BAD_CFLAGS) \
