camerabin2: Adds new imagecapturebin
Adds an bin that is responsible for image captures.

It is a simple ffmpegcolorspace ! jpegenc ! jifmux ! multifilesink
for now.

--- a/gst/camerabin2/Makefile.am
+++ b/gst/camerabin2/Makefile.am
@@ -1,6 +1,7 @@
 plugin_LTLIBRARIES = libgstcamerabin2.la
 
 libgstcamerabin2_la_SOURCES = gstviewfinderbin.c \
+				gstimagecapturebin.c \
 				gstplugin.c
 
 libgstcamerabin2_la_CFLAGS = \
@@ -13,4 +14,5 @@ libgstcamerabin2_la_LIBADD = \
 libgstcamerabin2_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstcamerabin2_la_LIBTOOLFLAGS = --tag=disable-static
 
-noinst_HEADERS = gstviewfinderbin.h
+noinst_HEADERS = gstviewfinderbin.h \
+		gstimagecapturebin.h
