chopmydata: Add new element
This element splits up a stream into randomly-sized buffers.
Useful (maybe) for testing parsers.

--- a/gst/debugutils/Makefile.am
+++ b/gst/debugutils/Makefile.am
@@ -18,7 +18,9 @@ libgstdebugutilsbad_la_SOURCES = \
 	fpsdisplaysink.c \
 	debugutilsbad.c \
 	gstchecksumsink.c \
-	gstchecksumsink.h
+	gstchecksumsink.h \
+	gstchopmydata.c \
+	gstchopmydata.h
 nodist_libgstdebugutilsbad_la_SOURCES = $(BUILT_SOURCES)
 libgstdebugutilsbad_la_CFLAGS = $(GST_CFLAGS) $(GST_BASE_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS)
 libgstdebugutilsbad_la_LIBADD = $(GST_BASE_LIBS) $(GST_PLUGINS_BASE_LIBS) \
