--- a/docs/plugins/Makefile.am
+++ b/docs/plugins/Makefile.am
@@ -140,6 +140,7 @@ EXTRA_HFILES = \
 	$(top_srcdir)/gst/audioparsers/gstac3parse.h \
 	$(top_srcdir)/gst/audioparsers/gstamrparse.h \
 	$(top_srcdir)/gst/audioparsers/gstflacparse.h \
+	$(top_srcdir)/gst/audioparsers/gstdcaparse.h \
 	$(top_srcdir)/gst/autoconvert/gstautoconvert.h \
 	$(top_srcdir)/gst/camerabin/gstcamerabin.h \
 	$(top_srcdir)/gst/coloreffects/gstcoloreffects.h \
