--- a/libs/gst/dataprotocol/Makefile.am
+++ b/libs/gst/dataprotocol/Makefile.am
@@ -37,11 +37,11 @@ GstDataprotocol-@GST_MAJORMINOR@.gir: $(INTROSPECTION_SCANNER) libgstdataprotoco
 		-I$(top_srcdir) \
 		$(gir_cincludes) \
 		--add-include-path=$(top_builddir)/gst \
-		--library=libgstdataprotocol-0.10.la \
-		--include=Gst-0.10 \
+		--library=libgstdataprotocol-@GST_MAJORMINOR@.la \
+		--include=Gst-@GST_MAJORMINOR@ \
 		--libtool="$(top_builddir)/libtool" \
-		--pkg gstreamer-0.10 \
-		--pkg-export=gstreamer-dataprotocol-0.10 \
+		--pkg gstreamer-@GST_MAJORMINOR@ \
+		--pkg-export=gstreamer-dataprotocol-@GST_MAJORMINOR@ \
 		--output $@ \
 		$(gir_headers) \
 		$(gir_sources)
