--- a/Makefile.am
+++ b/Makefile.am
@@ -34,3 +34,11 @@ check-torture:
 	true
 endif
 
+# cruft: plugins that have been merged or moved or renamed
+CRUFT_FILES = \
+ $(top_builddir)/common/shave \
+ $(top_builddir)/common/shave-libtool
+
+include $(top_srcdir)/common/cruft.mak
+
+all-local: check-cruft
