GESTimelineOperation: New abstract class for operations
This is a new class for all timeline objects that both produce and
consume data.

The existing subclasses of it are now:
* GESTimelineOverlay
* GESTimelineTransition

--- a/ges/Makefile.am
+++ b/ges/Makefile.am
@@ -19,6 +19,7 @@ libges_@GST_MAJORMINOR@_la_SOURCES = 		\
 	ges-timeline-pipeline.c			\
 	ges-timeline-source.c			\
 	ges-timeline-file-source.c		\
+	ges-timeline-operation.c		\
 	ges-timeline-transition.c		\
 	ges-timeline-test-source.c		\
 	ges-timeline-title-source.c		\
@@ -57,6 +58,7 @@ libges_@GST_MAJORMINOR@include_HEADERS = 	\
 	ges-timeline-pipeline.h			\
 	ges-timeline-source.h			\
 	ges-timeline-file-source.h		\
+	ges-timeline-operation.h		\
 	ges-timeline-transition.h		\
 	ges-timeline-test-source.h		\
 	ges-timeline-title-source.h		\
