libs: Fix GIR build for srcdir != builddir

--- a/libs/gst/check/Makefile.am
+++ b/libs/gst/check/Makefile.am
@@ -121,6 +121,8 @@ GstCheck-@GST_MAJORMINOR@.gir: $(INTROSPECTION_SCANNER) libgstcheck-@GST_MAJORMI
 		--strip-prefix=Gst \
 		-I$(top_srcdir) \
 		-I$(top_srcdir)/libs \
+		-I$(top_builddir) \
+		-I$(top_builddir)/libs \
 		$(gir_cincludes) \
 		--add-include-path=$(top_builddir)/gst \
 		--library=libgstcheck-0.10.la \
