--- a/libs/gst/base/Makefile.am
+++ b/libs/gst/base/Makefile.am
@@ -61,6 +61,8 @@ GstBase-@GST_MAJORMINOR@.gir: $(INTROSPECTION_SCANNER) libgstbase-@GST_MAJORMINO
 		--strip-prefix=Gst \
 		-I$(top_srcdir) \
 		-I$(top_srcdir)/libs \
+		-I$(top_builddir) \
+		-I$(top_builddir)/libs \
 		$(gir_cincludes) \
 		--add-include-path=$(top_builddir)/gst \
 		--library=libgstbase-0.10.la \
