gstpay/depay: add generic gstreamer payloader
Add the beginnings of a generic GStreamer buffers payloader.

--- a/gst/rtp/Makefile.am
+++ b/gst/rtp/Makefile.am
@@ -13,6 +13,8 @@ libgstrtp_la_SOURCES = \
 	gstrtpceltpay.c \
 	gstrtpdvdepay.c \
 	gstrtpdvpay.c \
+	gstrtpgstdepay.c \
+	gstrtpgstpay.c \
 	gstrtpilbcdepay.c \
 	gstrtpilbcpay.c \
 	gstrtpmpadepay.c \
@@ -104,6 +106,8 @@ noinst_HEADERS =			\
 		 gstrtpdvpay.h 	        \
 		 gstrtpamrdepay.h 	\
 		 gstrtpamrpay.h 	\
+		 gstrtpgstdepay.h 	\
+		 gstrtpgstpay.h 	\
 		 gstrtpilbcdepay.h      \
 		 gstrtpilbcpay.h        \
 		 gstrtppcmadepay.h	\
